# ubuntu-config-scripts

./: .clippy.toml  .env.example  .gitignore  .pmat-gates.toml  .pmat.toml  BASHRS_STATUS.md  BASHRS_WARNINGS_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONVERSION-CANDIDATES-ANALYSIS.md  Cargo.toml  GIT-HISTORY-CLEANUP-PLAN.md  ISSUE-78-ENUM-FIELD-CAST.md  LICENSE  LINK-FIXES-SUMMARY.md  LINK-VALIDATION-REPORT.md  Makefile  Makefile.audio  Makefile.book  Makefile.dev  Makefile.ruchy  Makefile.rust  Makefile.system  NEXT-STEPS-V3.147.1.md  PROJECT-STATUS-2025-10-29.md  PUBLIC-RELEASE-PREPARATION-SUMMARY.md  QUALITY_TOOLS_PREVENTION_GUIDE.md  README-QUALITY-ANALYSIS.md  README.md  RUCHY-001-STATUS.md  RUCHY-002-STATUS.md  RUCHY-003-STATUS.md  RUCHY-004-STATUS.md  RUCHY-005-STATUS.md  RUCHY-006-STATUS.md  RUCHY-007-STATUS.md  RUCHY-008-STATUS.md  RUCHY-009-STATUS.md  RUCHY-BUG-001.md  (+56 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  ci.yml.disabled  deploy.yml.disabled  gunner-tasks.yml  quick-test.yml  ruchy-ci.yml  ruchy-ci.yml.disabled  ruchy-integration-tests.yml  ruchy-integration-tests.yml.disabled  test.yml.disabled
archive/davinci-sprawl/: complete-davinci-fix.ts  davinci-20-definitive-fix.ts  davinci-20-isolated.ts  davinci-20-working.ts  davinci-clean-launch.ts  davinci-final-working.sh  davinci-minimal-fix.ts  davinci-working-fix.ts  fix-davinci-20-final.ts  fix-davinci-20-pango.ts  (+12 more)
config/: runner-config.yaml
docs/: DAVINCI-RESOLVE-FIX.md  MCP_INTEGRATION.md  RUC-001-COMPLETE.md  RUC-001-GREEN-PHASE-COMPLETE.md  RUC-001-RED-PHASE-COMPLETE.md  RUC-001-RUCHY-GREEN-PHASE-BLOCKED.md  RUC-001-RUCHY-GREEN-PHASE-COMPLETE.md  RUC-001-RUCHY-RED-PHASE-COMPLETE.md  RUC-002-CLI-INTERFACE-COMPLETE.md  RUC-003-MICROPHONE-GREEN-PHASE-COMPLETE.md  RUC-004-CLI-COMPLETE.md  RUC-005-PRODUCTION-COMPLETE.md  RUC-006-DIAGNOSTICS-COMPLETE.md  SESSION-SUMMARY-2025-10-30-EXTENDED-UTILITY-SUITE.md  SESSION-SUMMARY-2025-10-30-SYSTEM-MODULES.md  SESSION-SUMMARY-2025-10-30-UTILITY-MODULES.md  SESSION-SUMMARY-2025-10-30.md  github-runner.md
examples/: davinci-obs-workflow.ts
ruchy/: .pmat.toml  Cargo.toml  Makefile  README.md
ruchy-scripts/: Makefile  Makefile.ruchy  test-basic.ruchy  test_ruchy.ruchy  test_suite.ruchy  verify-syntax.sh
ruchy/audio/: configure_speakers.ruchy  enable_mic.ruchy  fix_audio.ruchy  mod.ruchy
ruchy/dev/: bridge_validator.ruchy  deploy.ruchy  install_pmat_deps.ruchy  mod.ruchy  ruchy_monitor.ruchy
ruchy/examples/: math_and_collections.ruchy  network_info.ruchy  string_utilities.ruchy  system_health_check.ruchy
ruchy/lib/: audio_speakers.ruchy  common.ruchy  common_green.ruchy  common_minimal.ruchy  common_v2.ruchy  common_working.ruchy  deno-updater.ruchy  deps.ruchy  logger.ruchy  logger_file.ruchy  logger_final.ruchy  logger_simple.ruchy  logger_v2.ruchy  logger_v3.ruchy  microphone.ruchy  parse_args_minimal.ruchy  parse_args_only.ruchy  schema.ruchy  system_command.ruchy
ruchy/src/: audio_speakers.rs  collection_utils.ruchy  diagnostics.ruchy  disk.ruchy  format_utils.ruchy  hardware.ruchy  hardware_simple.ruchy  lib.rs  main.ruchy  math_utils.ruchy  microphone_module.ruchy  network.ruchy  process.ruchy  result_utils.ruchy  string_utils.ruchy  system_summary.ruchy  user.ruchy  validation.ruchy
ruchy/system/: check_davinci.ruchy  configure_obs.ruchy  diagnose_av.ruchy  launch_davinci.ruchy  mod.ruchy  optimize_rust_dev.rs  pipewire_monitor.ruchy  refresh_kde.ruchy
ruchy/tests/: demo_logger_file.ruchy  demo_logger_inline.ruchy  demo_logger_minimal.ruchy  optimize_rust_dev_test.rs  property_tests.rs  test_array_utils_standalone.ruchy  test_audio_speakers.rs  test_audio_speakers.ruchy  test_audio_speakers_v2.ruchy  test_check_command.ruchy  test_cli_audio.ruchy  test_command_minimal.ruchy  test_command_simple.ruchy  test_command_with_args.ruchy  test_common.ruchy  test_common_standalone.ruchy  test_config.ruchy  test_config_minimal.ruchy  test_config_standalone.ruchy  test_deno_updater.ruchy  test_deps_minimal.ruchy  test_deps_standalone.ruchy  test_logger.ruchy  test_logger_file.ruchy  test_logger_file_simple.ruchy  test_logger_production.ruchy  test_logger_production_inline.ruchy  test_logger_standalone.ruchy  test_logger_with_file.ruchy  test_microphone.ruchy  test_microphone_simple.ruchy  test_minimal.ruchy  test_schema.ruchy  test_schema_standalone.ruchy  test_simple.ruchy  test_system_command_standalone.ruchy  test_vector_search_standalone.ruchy
ruchy/tests/integration/: test_system_health.ruchy  test_utility_chain.ruchy
schemas/: issue79_comprehensive.yaml
scripts/: mcp-server.ts  schema-test-runner.ts  search.ts  seed.ts
src/: lib.rs
tests/: search.test.ts  seed.test.ts
(+416 files in other folders)
